Fix grid-gap not using spacing variable

--- a/src/style.css
+++ b/src/style.css
@@ -177,7 +177,7 @@ footer {
         "header header"
         "aside main"
         "footer footer";
-        grid-gap: 0.5em;
+        grid-gap: var(--spacing);
         grid-template-columns: 1fr 3fr;
         grid-template-rows: auto 1fr auto;
         min-height: 100vh;
